<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nmccloud.project3.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_bottom" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nmccloud.project3.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.nmccloud.project3.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
    <action
        android:id="@+id/action_global_navigation_settings"
        app:destination="@id/navigation_settings"
        app:enterAnim="@anim/slide_in_top"
        app:exitAnim="@anim/slide_out_top"
        app:popEnterAnim="@anim/slide_in_top"
        app:popExitAnim="@anim/slide_out_top" />
    <action
        android:id="@+id/action_global_navigation_info"
        app:destination="@id/navigation_info"
        app:enterAnim="@anim/zoom_in"
        app:exitAnim="@anim/zoom_out"
        app:popEnterAnim="@anim/zoom_in"
        app:popExitAnim="@anim/zoom_out" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.nmccloud.project3.ui.DetailFragment"
        android:label="@string/movieDetails">
        <action
            android:id="@+id/action_detailFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_out_bottom"
            app:exitAnim="@anim/slide_in_bottom"
            app:popEnterAnim="@anim/slide_out_bottom"
            app:popExitAnim="@anim/slide_in_bottom" />
        <action
            android:id="@+id/action_detailFragment_to_reviewFragment"
            app:destination="@id/reviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.nmccloud.project3.ui.review.ReviewFragment"
        android:label="@string/reviewTitle"/>
</navigation>