<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/genre_year_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/genre_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fonts"
                    android:text="@string/genre"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/genre_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/genreArray"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/rating_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/ratingArray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/year_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year_released"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/year_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/ratingArray" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_director_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/title_editText"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/director_textView"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/director"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/director_editText"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notes_textView"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notes"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/notes_editText"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textLongMessage|textMultiLine"
                    android:lines="1"
                    android:scrollHorizontally="false"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cancel_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/usecamera_cancel_add_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
